--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         <label for="title">Title</label>
         <input type="text" id="titleinput" />
         <label for="description">Description</label>
-        <input
+        <textarea
           id="textinput"
           rows="4"
           cols="50"
           name="comment"
           form="usrform"
-        />
+        ></textarea>
         <label for="status">Status</label>
         <select name="" id="lists-of-option">
           <option class="taskoptions" id="ToDo" value="todo">To do</option>
@@ -96,13 +96,13 @@
         <label for="edit_title">Title</label>
         <input type="text" id="edittitleinput" />
         <label for="editdescription">Description</label>
-        <input
+        <textarea
           id="edittextinput"
           rows="4"
           cols="50"
           name="comment"
           form="usrform"
-        />
+        ></textarea>
         <label for="status">Status</label>
         <select name="" id="edit-lists-of-option">
           <option class="taskoptions" id="editToDo" value="todo">To do</option>
