--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <button id="close-form" onclick="closeTask()">Close</button>
         <h2>Add task</h2>
         <label for="title">Title</label>
-        <input type="text" id="titleinput" />
+        <input type="text" id="titleinput" onclick="" />
         <label for="description">Description</label>
         <textarea
           id="textinput"
